@@ -5,8 +5,8 @@ noinst_SCRIPTS = $(TESTS)
 # For dist target.
 noinst_HEADERS = apic.h defs.h dir.h disk_inode.h disk_inode_ffs.h \
         fat.h filesys.h freebsd.h fs.h i386-elf.h imgact_aout.h \
-        mb_header.h mb_info.h pc_slice.h serial.h shared.h smp-imps.h \
-	nbi.h
+        mb_header.h mb_info.h md5.h pc_slice.h serial.h shared.h \
+	smp-imps.h nbi.h
 EXTRA_DIST = $(noinst_SCRIPTS)
 
 # For <stage1.h>.
